--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Prehistoric peoples -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Scènes préhistoriques
 url: http://www.gutenberg.org/ebooks/27304
